force-app/main/default/objects/DynamicFlowComponent__mdt/DynamicFlowComponent__mdt.object-meta.xml
<CustomObject>
    <label>Dynamic Flow Component</label>
    <pluralLabel>Dynamic Flow Components</pluralLabel>
</CustomObject>