force-app/main/default/objects/DynamicFlowComponent__mdt/fields/AutoLaunchedOutputVariables__c.field-meta.xml
<CustomField>
    <fullName>AutoLaunchedOutputVariables__c</fullName>
    <inlineHelpText>Tell the component about any additional parameters it does not already know about (see docs)</inlineHelpText>
    <label>Autolaunched Output Variables</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>