force-app/main/default/objects/DynamicFlowComponent__mdt/fields/Flow__c.field-meta.xml
<CustomField>
    <fullName>Flow__c</fullName>
    <label>Flow</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>