force-app/main/default/objects/DynamicFlowComponent__mdt/fields/IsAutoLaunched__c.field-meta.xml
<CustomField>
    <fullName>IsAutoLaunched__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>In order to use Autolaunched Flows you must also complete setup via the Flow Factory tab</inlineHelpText>
    <label>Is Autolaunched</label>
    <type>Checkbox</type>
</CustomField>